--- a/06_Paper/ER-ED/Manuscript_ERED_Stage1.Rmd
+++ b/06_Paper/ER-ED/Manuscript_ERED_Stage1.Rmd
@@ -150,7 +150,7 @@ The authors declare no competing interests.
 
 \newpage
 ```{r fig1appendix, echo = FALSE, message = FALSE, warning = FALSE, out.width="98%"}
-include_graphics(here("99_Thinktank","other","Paradigm_Scheme_T2.png" ))
+include_graphics(here("99_Thinktank","Other","Paradigm_Scheme_T2.png" ))
 ```
 *Figure 1.* Exemplary visualisation of two response patterns. In the top half, the person has a clear preference for one of the three strategies. In the lower half, they have no clear preference and therefore show an inconsistent response pattern. This pattern can also be represented by our paradigm.
 # Design Table
