--- a/06_Paper/COG-ED/Manuscript.Rmd
+++ b/06_Paper/COG-ED/Manuscript.Rmd
@@ -2119,6 +2119,8 @@ Multi level model:
 
 The Bayes Factor $BF10$ of the multi level model approached infinity.
 
+The conditional $R^2$ of the model describes the proportion of variance explained by both fixed and random effects, and is $R^2=$ `r format(h2b_r2, digits = 2)`.
+
 \newpage
 
 ## Hypothesis 2c: Subjective values decline stronger with increasing task load for individuals with low compared to high NFC scores.
@@ -2139,6 +2141,8 @@ scale_x_continuous(breaks = c(-1,0,1), labels = c("2","3","4"))
 Johnson-Neyman interval: `r paste("[", round(h2c_jn.int[1], digits = 2), ", ", round(h2c_jn.int[2], digits = 2), "]", sep = "")`
 
 Bayes Factor: $BF10=$ `r format(extractBF(h2c_BF)$bf, digits = 2)`
+
+The conditional $R^2$ of the model describes the proportion of variance explained by both fixed and random effects, and is $R^2=$ `r format(h2c_r2, digits = 2)`.
 
 \newpage
 
