--- a/06_Paper/COG-ED/Manuscript.Rmd
+++ b/06_Paper/COG-ED/Manuscript.Rmd
@@ -44,10 +44,10 @@ author:
     orcid         : "0000-0002-9426-5397"
     affiliation   : "1"
     role: 
+      - Conceptualization
+      - Methodology
       - Formal analysis
-      - Writing - original draft preparation
       - Writing - review & editing
-      - Visualization
 affiliation:
   - id            : "1"
     institution   : "Faculty of Psychology, Technische Universität Dresden, 01069 Dresden, Germany"
@@ -461,7 +461,7 @@ The COG-ED paradigm sets the SV of 1-back to 1, regardless of the response patte
 Adding a comparison of 2-back and 3-back allows the SVs of those two levels to be more differentiated, but leaves the SV of 1-back unchanged.
 Adding three more comparisons of the same levels but using the easier level as reference does approach the true preference, but has two disadvantages.
 First, the SVs are still distorted by the SVs returned by the original paradigm, and second, having more task levels would lead to an exponential increase in comparisons.
-Therefore, the solution lies in reducing the number of necessary comparisons by presenting only one effort discounting round for each possible pair of levels, and by starting each round with a choice between equal prices. <!--CK: instead of prices I would prefer reward in this context -->
+Therefore, the solution lies in reducing the number of necessary comparisons by presenting only one effort discounting round for each possible pair of levels, and by starting each round with a choice between equal rewards.
 For example, the participant is presented with the choice of receiving 1€ for 2-back or 1€ for 4-back.
 The level chosen by the participant will then be used as the level with a flexible value, which starts at 1€ and is changed in every iteration.
 The level that was not chosen will be set to a fixed value of 2€.
@@ -486,7 +486,7 @@ Regarding the associations of subjective and objective task load we hypothesize 
 Regarding the associations of task load and effort discounting we hypothesize that (2a) SVs decline with increasing *n*-back level, and (2b) they do so even after controlling for declining task performance.
 A hypothesis that was not investigated in the original study is that (2c) SVs decline stronger with increasing task load for individuals with low compared to high NFC scores.
 And regarding individual differences in effort discounting we hypothesize that (3a) SVs predict individual NFC scores, and (3b) perceived task load does not predict individual NFC scores.
-Each hypothesis is detailed in the Design Table in the Appendix.
+Each hypothesis is detailed in the [Design Table](#DesignTableSection) in the Appendix.
 
 ```{r preprocessing, echo=FALSE, message=FALSE, warning=FALSE}
 
@@ -1782,11 +1782,13 @@ We used *R* with *R Studio* [@RCT2020; @RStudioTeam2020] with the main packages 
 
 ## Ethics information
 
-The study protocol complies with all relevant ethical regulations and was approved by the ethics committee of the Technische Universität Dresden (reference number EK...)<!--CK: don't forget to add -->. Prior to testing, written informed consent will be obtained. Participants will receive 30€ in total or course credit for participation.
+The study protocol complies with all relevant ethical regulations and was approved by the ethics committee of the Technische Universität Dresden (reference number EK...).
+Prior to testing, written informed consent will be obtained.
+Participants will receive 30€ in total or course credit for participation.
 
 ## Pilot data
 
-The sample of the pilot study consisted of $N=`r length(setindex)-1`$ participants (`r round((table(data_quest$gender)[2]/(length(setindex)-1))*100, digits = 1)`% female, $M=`r round(mean(data_quest[,"age"], na.rm = TRUE), digits = 1)`$ ($SD=`r round(sd(data_quest[,"age"], na.rm = TRUE), digits = 1)`$)\ years old). <!-- This results in 2 digits after the comma, all second digits are 0, perhaps use papaja::printnum instead of round, it will still be 2 digits, but with exact numbers --> 
+The sample of the pilot study consisted of $N=`r length(setindex)-1`$ participants (`r round((table(data_quest$gender)[2]/(length(setindex)-1))*100, digits = 1)`% female, $M=`r printnum(mean(data_quest[,"age"], na.rm = TRUE))`$ ($SD=`r printnum(sd(data_quest[,"age"], na.rm = TRUE))`$)\ years old).
 One participant's data was removed because they misunderstood the instruction.
 Due to a technical error the subjective task load data of one participant was incomplete, so the hypotheses involving the NASA Task Load Index were analyzed with $n=`r length(setindex)-2`$ data sets.
 The results showed increases in subjective and objective task load measures with higher *n*-back level.
@@ -1798,7 +1800,7 @@ All results are detailed in the Supplementary Material.
 
 ## Design
 
-Healthy participants aged 18 to 30\ <!-- welchen Effekt hat eigentlich der Backslash --> years will be recruited using the software *ORSEE* [@Greiner2015].
+Healthy participants aged 18 to 30\ years will be recruited using the software *ORSEE* [@Greiner2015].
 Participants will complete the personality questionnaires online and then visit the lab for two sessions one week apart.
 NFC will be assessed using the 16-item short form of the Need for Cognition Scale [@Cacioppo1984; @Bless1994].
 Responses to each item (e.g., "Thinking is not my idea of fun", recoded) will be recorded on a 7-point Likert scale.
@@ -1819,7 +1821,9 @@ Study data will be collected and managed using REDCap electronic data capture to
 
 ## Sampling plan
 
-*A priori* sample size determination was performed using with *G\*Power* [@Faul2007; @Faul2009], mainly based on the results of the analyses of Westbrook et al. [-@Westbrook2013] (see Design Table<!-- link this table -->). Results of these analyses revealed that ... <!-- showed an increase in reaction time with higher *n*-back levels, indicated that we should collect data from at least 53 participants, assuming $\eta^2=0.04$, $\alpha=.05$, and $\beta=.95$. --> 
+Sample size determination was mainly based on the results of the analyses of Westbrook et al. [-@Westbrook2013] (see [Design Table](#DesignTableSection)).
+As there was no prior evidence on the magnitude of an interaction between *n*-back level and NFC, we assumed a small to medium effect size of $f=.175$.
+Sample size analysis with *G\*Power* [@Faul2007; @Faul2009] for a repeated measures ANOVA with within-between interaction indicated that we should collect data from at least 72 participants, assuming $\alpha=.05$ and $\beta=.95$.
 The power analyses of all other hypotheses yielded smaller necessary sample sizes.
 To account for technical errors and exclusions of physiological data of the second lab session due to excessive noise, we aim to collect data of 80 participants.
 
@@ -1835,17 +1839,15 @@ To test our hypotheses, we will perform a series of rmANOVAs and an MLM with ort
 Declining performance will be investigated by calculating an rmANOVA with three paired contrasts comparing *d'* between two levels of 2-, 3-, and 4-back at a time.
 Another rmANOVA with three paired contrasts will be computed to compare the mean RT between two levels of 2-, 3-, and 4-back at a time.
 To investigate changes in NASA-TLX ratings, six rmANOVAs will be computed, one for each NASA-TLX subscale, and each with six paired contrasts comparing the ratings between two levels of 1-, 2-, 3-, and 4-back at a time.
-For each effort discounting round, SVs will be calculated by adding or subtracting 0.015625 <!--CK: for the reader it might be unclear how we determined this value -->from the last monetary value of the flexible level, depending on the participant's last choice.
+For each effort discounting round, SVs will be calculated by adding or subtracting 0.015625 from the last monetary value of the flexible level, depending on the participant's last choice.
+This value is the result of dividing the first adjustment of $0.50€$ by 2 five times, once in each effort discounting round.
 Then, these final monetary values will be divided by 2€, and the SV of each level per participant will be computed by averaging all final values of each level, regardless of whether it was fixed or flexible.
 An rmANOVA with six paired contrasts will be computed, comparing the SVs between two levels of 1-, 2-, 3-, and 4-back at a time.
 Estimated marginal means will be used for the paired contrasts of each rmANOVA, including Tukey method for *p*-value adjustment.
 
 To determine the influence of task performance on the association of SVs and *n*-back level, we will set up an MLM using the $lmerTest$ package [@Kuznetsova2017]. 
 We will apply restricted maximum likelihood (REML) to fit the model.
-First, we will calculate the intraclass correlation (ICC) as effect size measure for random effects. 
-ICC displays the proportion of variance that is explained by differences between persons. <!--CS: Wieso wird der ICC nur für das Null Modell berechnet ? Man könnte den doch auch für das full-model ebenfalls angeben und sehen, wieviel Varianzaufklärung hinzugekommen ist? --> 
-<!--CK: Die Intraklassenkorrelation wird immer auf Grundlage des Nullmodells berechnet. Sie gibt an, wieviel der Gesamtvarianz auf Unterschiede zwischen den Personen zurückgeführt werden kann. Das Nullmodell zeigt, wie stark sich die einzelnen Ebene-2-Einheiten in ihrer mittleren Ausprägung auf der aV unterscheiden. Daher enthält es keine Prädiktoren. Ich habe den letzten Teil des Satzes "on the basis of the null model" rausgenommen, da er redundant ist. -->
-<!--CK: werden wie Korrelationskoeffizienten interpretiert (https://doi.org/10.1186/s40536-018-0061-2), könnten wir im Ergebnisteil demnach in der Größe einschätzen --->
+As an effect size measure for random effects we will firstly calculate the intraclass correlation (ICC), which displays the proportion of variance that is explained by differences between persons.
 Second, we will estimate a random slopes model of SVs including n-back level as level-1-predictor and, additionally, NFC as level-2-predictor. 
 Within the model, we will control for *d'*, RT, correct, and post-correct trials.
 $$
@@ -1932,7 +1934,7 @@ The authors declare no competing interests.
 
 \newpage
 
-# Design Table
+# Design Table {#DesignTableSection}
 
 (Starts on next page)
 
