--- a/06_Paper/COG-ED/CERED.bib
+++ b/06_Paper/COG-ED/CERED.bib
@@ -843,4 +843,17 @@
   urldate    = {2021-03-16},
 }
 
+@Article{Lorah2018,
+  author    = {Julie Lorah},
+  journal   = {Large-scale Assessments in Education},
+  title     = {Effect size measures for multilevel models: definition, interpretation, and {TIMSS} example},
+  year      = {2018},
+  month     = {jul},
+  number    = {1},
+  volume    = {6},
+  doi       = {10.1186/s40536-018-0061-2},
+  groups    = {CERED},
+  publisher = {Springer Science and Business Media {LLC}},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
